# xsv

./: .codespellrc  .gitignore  .travis.yml  BENCHMARKS.md  Cargo.toml  Dockerfile  HomebrewFormula  Makefile  README.md  appveyor.yml
ci/: before_deploy.sh  install.sh  script.sh  utils.sh
docs/: GAZETTE.md  LOVE_LETTER.md  NOTES.md
oldsrc/: config.rs  select.rs
oldsrc/cmd/: cat.rs  flatten.rs  index.rs  mod.rs  partition.rs  select.rs  slice.rs  table.rs
pkg/brew/: xsv.rb
scripts/: benchmark-basic  build-release  github-release  github-upload
snap/: snapcraft.yaml
src/: app.rs  config.rs  count.rs  fmt.rs  index.rs  main.rs  select.rs  table.rs  types.rs  util.rs  xan.rs
src/cmd/: apply.rs  behead.rs  bins.rs  cat.rs  count.rs  datefmt.rs  dedup.rs  enumerate.rs  exclude.rs  explode.rs  fill.rs  filter.rs  fixlengths.rs  flatmap.rs  flatten.rs  fmt.rs  foreach.rs  frequency.rs  glob.rs  headers.rs  hist.rs  implode.rs  index.rs  input.rs  join.rs  jsonl.rs  kway.rs  lang.rs  lua.rs  map.rs  mod.rs  partition.rs  pseudo.rs  python.rs  rename.rs  replace.rs  reverse.rs  sample.rs  script.rs  search.rs  (+12 more)
src/xan/: error.rs  functions.rs  interpreter.rs  mod.rs  parser.rs  types.rs  utils.rs
tests/: test_apply.rs  test_behead.rs  test_cat.rs  test_count.rs  test_datefmt.rs  test_dedup.rs  test_enumerate.rs  test_exclude.rs  test_explode.rs  test_fill.rs  test_filter.rs  test_fixlengths.rs  test_flatmap.rs  test_flatten.rs  test_fmt.rs  test_foreach.rs  test_frequency.rs  test_headers.rs  test_implode.rs  test_index.rs  test_join.rs  test_kway.rs  test_lang.rs  test_lua.rs  test_map.rs  test_partition.rs  test_pseudo.rs  test_py.rs  test_replace.rs  test_reverse.rs  test_script_newcolumn.rs  test_search.rs  test_select.rs  test_shuffle.rs  test_slice.rs  test_sort.rs  test_split.rs  test_stats.rs  test_table.rs  test_transform.rs  (+3 more)
