[package]
name = "xsv"
version = "0.13.0-medialab23"  #:version
authors = [
  "Andrew Gallant <jamslam@gmail.com>",
  "Guillaume Plique <guillaume.plique@sciencespo.fr>",
  "Béatrice Mazoyer <beatrice.mazoyer@sciencespo.fr>",
  "Laura Miguel <laura.miguel@sciencespo.fr>",
  "César Pichon <cesar.pichon@sciencespo.fr>"
]
description = "A high performance CSV command line toolkit."
documentation = "https://github.com/medialab/xsv#readme"
homepage = "https://github.com/medialab/xsv"
repository = "https://github.com/medialab/xsv"
readme = "README.md"
keywords = ["csv", "tsv", "slice", "command"]
license = "Unlicense/MIT"
autotests = false

[[bin]]
name = "xsv"
test = false
bench = false
doctest = false

[[test]]
name = "tests"

[features]
lang = ["dep:lingua"]

[profile.release]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[dependencies]
atty = "0.2.14"
byteorder = "1"
bytesize = "1.3.0"
calamine = "0.22.0"
chrono = "0.4.23"
chrono-tz = "0.6"
colored = "2.0.0"
crossbeam-channel = "0.2.4"
csv = "1.2.2"
csv-index = "0.1.6"
dateparser = "0.1.7"
docopt = "1"
encoding = "0.2.33"
ext-sort = { version = "0.1.4", features = ["memory-limit"] }
filetime = "0.1"
flate2 = "1.0.27"
glob = "0.3.1"
lingua = { version = "1.4.0", optional = true }
nom = "7.1.3"
numfmt = "1.1.1"
num_cpus = "1.4"
pariter = "0.5.1"
unidecode = "0.3.0"
rand = "0.5"
rayon = "1.8.0"
regex = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
streaming-stats = "0.2"
tabwriter = "1"
termsize = "0.1"
textwrap = "0.16.0"
threadpool = "1.3"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.11"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
quickcheck = { version = "0.7", default-features = false }
log = "0.4"
